<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/background">


    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AE000000" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="100px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_tanpa_background"/>

    <ImageView
        android:id="@+id/pajangan2"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="176dp"
        android:elevation="100px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pajangan"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        app:cardCornerRadius="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingTop="40dp"
            android:paddingBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


            <EditText
                android:id="@+id/ed_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:hint="@string/username"
                android:inputType="text"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp" />

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/google"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:elevation="100px"
        app:layout_constraintStart_toEndOf="@+id/btn_login"
        android:paddingLeft="10px"
        app:layout_constraintTop_toBottomOf="@id/card_view"
        app:srcCompat="@drawable/google"
        tools:ignore="MissingConstraints"
        android:layout_margin="20dp"/>

    <ImageView
        android:id="@+id/facebook"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:elevation="100px"
        app:layout_constraintStart_toEndOf="@+id/google"
        android:paddingLeft="10px"
        app:layout_constraintTop_toBottomOf="@id/card_view"
        app:srcCompat="@drawable/facebook"
        tools:ignore="MissingConstraints"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/kuning"
        android:paddingVertical="12dp"
        android:text="@string/login"
        android:textColor="@color/merah"
        app:cornerRadius="10dp"
        android:layout_marginEnd="500px"
        android:layout_marginStart="80px"
        app:layout_constraintTop_toBottomOf="@id/card_view"/>

    <LinearLayout
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/merah"
            android:textAllCaps="false"
            android:paddingStart="0dp"
            android:background="@android:color/transparent"/>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>